devops-platform/platform/sonarqube/sonarqube.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-postgresql
  namespace: cicd
spec:
  selector:
    app: sonarqube-postgresql
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarqube-postgresql
  namespace: cicd
spec:
  serviceName: sonarqube-postgresql
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube-postgresql
  template:
    metadata:
      labels:
        app: sonarqube-postgresql
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 10Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: cicd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: sonarqube
          image: sonarqube:9.9-community
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: /opt/sonarqube/data
              name: sonarqube-storage
              subPath: data
            - mountPath: /opt/sonarqube/extensions
              name: sonarqube-storage
              subPath: extensions
      volumes:
        - name: sonarqube-storage
          persistentVolumeClaim:
            claimName: sonarqube-data
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: cicd
spec:
  type: ClusterIP
  selector:
    app: sonarqube
  ports:
    - port: 9000
      targetPort: 9000
